事前準備完了

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Famicom";
-  src: url("../src/public/fonts/Famicom.ttf") format("woff2");
+  src: url("../public/fonts/Famicom.ttf") format("woff2");
 }
 
 body {
