--- a/components/page/Home/Home.module.scss
+++ b/components/page/Home/Home.module.scss
@@ -1,4 +1,9 @@
 .home {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  
   &__title {
     font-size: 100px;
     font-family: "PocketMonk";
