--- a/components/page/Description/Description.module.scss
+++ b/components/page/Description/Description.module.scss
@@ -1,10 +1,35 @@
 .description {
   &__box {
-    margin: 15% 8%;
-    text-align: center;
+    margin: 10% 8% 0;
+
+    h1 {
+      font-size: 32px;
+      font-weight: bold;
+      font-family: "Famicom";
+      margin-bottom: 24px;
+    }
+
+    h2 {
+      font-size: 24px;
+      font-weight: bold;
+      font-family: "Famicom";
+      margin-bottom: 16px;
+    }
   }
 
   &__text {
-    margin-bottom: 30px;
+    margin-bottom: 24px;
+  }
+
+  &__img {
+    width: 100%;
+    height: 350px;
+    background-color: #efefef;
+    border-radius: 10px;
+  }
+
+  &__button {
+    margin: 50px 0;
+    text-align: center;
   }
 }
