--- a/components/page/Beginner/Beginner.module.scss
+++ b/components/page/Beginner/Beginner.module.scss
@@ -1,12 +1,30 @@
 .beginner {
   &__wrapper {
-    margin: 10% 10% 0;
+    max-width: 900px;
+    margin: 10% auto 0;
+    position: relative;
 
     h1 {
       font-size: 32px;
       font-weight: bold;
       font-family: "Famicom";
       margin-bottom: 24px;
+    }
+  }
+
+  &__count {
+    position: absolute;
+    top: -30px;
+    right: 0;
+    
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    span {
+      font-size: 25px;
     }
   }
 
@@ -61,7 +79,7 @@
   &__img {
     width: 200px;
     height: 200px;
-    margin: auto;
+    margin: 0 0 0 auto;
     padding: 5%;
     border-radius: 20px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
