--- a/components/page/Description/Description.module.scss
+++ b/components/page/Description/Description.module.scss
@@ -23,9 +23,14 @@
 
   &__img {
     width: 100%;
-    height: 350px;
-    background-color: #efefef;
     border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+
+    img{
+      width: 100%;
+      object-fit: contain;
+      border-radius: 10px;
+    }
   }
 
   &__button {
