--- a/components/page/Beginner/Beginner.module.scss
+++ b/components/page/Beginner/Beginner.module.scss
@@ -94,16 +94,38 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+    margin-bottom: 50px;
   }
 
   &__item {
     width: calc(20% - 20px);
-    padding: 3%;
-    border-radius: 20px;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
 
     img {
       width: 100%;
+    }
+  }
+
+  &__desc {
+    position: relative;
+    padding: 10%;
+    border-radius: 20px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+
+    span {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 20px;
+    }
+  }
+
+  &__diff {
+    text-align: left;
+    margin: 10% 5% 0;
+
+    p {
+      margin-bottom: 3%;
     }
   }
 
