#10 トップページのデザインが完成(配列で画像を管理)

--- a/components/page/Home/Home.module.scss
+++ b/components/page/Home/Home.module.scss
@@ -3,6 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  z-index: 15;
   
   &__title {
     font-size: 100px;
@@ -18,5 +19,15 @@
     flex-direction: column;
     gap: 30px;
     margin: 0 30px;
+  }
+
+  &__swiper {
+    display: flex;
+    
+    &-container {
+      width: 20%;
+      height: 100vh;
+      text-align: center;
+    }
   }
 }
