#12 onChangeイベントで選択した世代を取得

--- a/components/page/Description/Description.module.scss
+++ b/components/page/Description/Description.module.scss
@@ -20,7 +20,7 @@
   &__desc {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
     gap: 20px;
   }
 
