--- a/components/page/Quiz/QuizName/QuizName.module.scss
+++ b/components/page/Quiz/QuizName/QuizName.module.scss
@@ -41,7 +41,6 @@
   }
 
   &__name {
-    margin-bottom: 32px;
     font-family: "Famicom";
     width: 80%;
 
@@ -55,6 +54,8 @@
   }
 
   &__detail {
+    margin-top: 32px;
+    
     > * {
       margin-bottom: 20px;
     }
