--- a/components/page/Home/Home.module.scss
+++ b/components/page/Home/Home.module.scss
@@ -50,6 +50,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
+      &-img {
+        img {
+          object-fit: contain;
+          position: relative !important;
+          width: auto !important;
+        }
+      }
+
     }
   }
 }
