タイトルのサイズを強制的に100px

--- a/components/page/Home/Home.module.scss
+++ b/components/page/Home/Home.module.scss
@@ -11,7 +11,7 @@
   box-shadow: 1px 1px 5px rgb(0 0 0 / 20%);
   
   &__title {
-    font-size: 100px;
+    font-size: 100px !important;
     font-family: "PocketMonk";
     color: #edc32f;
     -webkit-text-stroke: 5px #3660b1;
