--- a/components/page/Home/Home.module.scss
+++ b/components/page/Home/Home.module.scss
@@ -12,7 +12,7 @@
   
   &__title {
     font-size: 100px !important;
-    font-family: "PocketMonk";
+    font-family: "PocketMonk" !important;
     color: #edc32f;
     -webkit-text-stroke: 5px #3660b1;
     text-stroke: 5px #3660b1;
