--- a/components/page/Home/Home.module.scss
+++ b/components/page/Home/Home.module.scss
@@ -9,6 +9,12 @@
   border-radius: 15px;
   background-color: #fff;
   box-shadow: 1px 1px 5px rgb(0 0 0 / 20%);
+
+  @media screen and (max-width: 500px){
+    width: 95%;
+    margin: auto;
+    padding: 25px;
+  }
   
   &__title {
     font-size: 100px !important;
@@ -17,6 +23,14 @@
     -webkit-text-stroke: 5px #3660b1;
     text-stroke: 5px #3660b1;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 500px){
+      text-align: center;
+      font-size: clamp(3.125rem, -2.4306rem + 27.7778vw, 6.25rem) !important;
+      -webkit-text-stroke: 4px #3660b1;
+      text-stroke: 4px #3660b1;
+      margin-bottom: 25px;
+    }
   }
 
   &__box {
@@ -44,6 +58,24 @@
     &-container {
       width: 20%;
       height: 100vh;
+
+      @media screen and (max-width: 1000px){
+        &:first-child {
+          display: none;
+        }
+      }
+
+      @media screen and (max-width: 800px){
+        &:nth-child(2) {
+          display: none;
+        }
+      }
+
+      @media screen and (max-width: 500px){
+        &:nth-child(3) {
+          display: none;
+        }
+      }
     }
 
     &-slide {
