--- a/components/page/Home/Home.module.scss
+++ b/components/page/Home/Home.module.scss
@@ -26,7 +26,7 @@
 
     @media screen and (max-width: 500px){
       text-align: center;
-      font-size: clamp(3.125rem, -2.4306rem + 27.7778vw, 6.25rem) !important;
+      font-size: clamp(4.0625rem, 0.1736rem + 19.4444vw, 6.25rem) !important;
       -webkit-text-stroke: 4px #3660b1;
       text-stroke: 4px #3660b1;
       margin-bottom: 25px;
@@ -38,6 +38,10 @@
     flex-direction: column;
     gap: 30px;
     margin: 0 30px;
+
+    @media screen and (max-width: 400px){
+      margin: 0;
+    }
   }
 
   &__swiper {
@@ -88,6 +92,10 @@
           object-fit: contain;
           position: relative !important;
           width: auto !important;
+
+          @media screen and (max-width: 500px){
+            width: 100% !important;
+          }
         }
       }
 
