--- a/components/page/Quiz/QuizName/QuizName.module.scss
+++ b/components/page/Quiz/QuizName/QuizName.module.scss
@@ -1,7 +1,7 @@
 .quiz-name {
   &__wrapper {
     max-width: 1000px;
-    margin: 10% auto 0;
+    margin: 10% auto;
     position: relative;
     padding: 0 3%;
 
@@ -138,12 +138,29 @@
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 800px){
+      // gap: 10px;
+    }
   }
 
   &__item {
     width: calc(20% - 20px);
     text-align: center;
 
+    @media screen and (max-width: 1000px){
+      width: calc(25% - 20px);
+      justify-content: start;
+    }
+
+    @media screen and (max-width: 800px){
+      width: calc(33% - 20px);
+    }
+
+    @media screen and (max-width: 600px){
+      width: calc(50% - 20px);
+    }
+      
     img {
       width: 100%;
     }
@@ -169,6 +186,10 @@
 
     p {
       margin-bottom: 3%;
+
+      @media screen and (max-width: 480px){
+        font-size: 13px;
+      }
     }
   }
 
