--- a/features/TweetArea/Tweet.module.scss
+++ b/features/TweetArea/Tweet.module.scss
@@ -27,17 +27,42 @@
     left: 50%;
     transform: translate(-50%,-50%);
 
-    max-width: 500px;
+    max-width: 800px;
     width: 100%;
     padding: 50px;
 
+    border-radius: 15px;
     background-color: #fff;
+    text-align: center;
 
-    span {
+    > span {
       position: absolute;
       top: 10px;
       right: 10px;
       cursor: pointer;
     }
+
+    &-desc {
+      margin-bottom: 20px;
+
+      h2 {
+        font-size: 20px;
+
+        span {
+          font-size: 40px;
+          margin: 0 10px;
+        }
+      }
+    }
+
+    &-btn {  
+      display: flex;
+      gap: 30px;
+
+      a, button {
+        width: 100%;
+      }
+    }
+
   }
 }
