--- a/features/TweetArea/Tweet.module.scss
+++ b/features/TweetArea/Tweet.module.scss
@@ -35,6 +35,15 @@
     background-color: #fff;
     text-align: center;
 
+    @media screen and (max-width: 800px){
+      max-width: unset;
+      width: 95%;
+    }
+
+    @media screen and (max-width: 480px){
+      padding: 50px 15px;
+    }
+
     > span {
       position: absolute;
       top: 10px;
@@ -58,6 +67,10 @@
     &-btn {  
       display: flex;
       gap: 30px;
+
+      @media screen and (max-width: 600px){
+        flex-direction: column;
+      }
 
       a, button {
         width: 100%;
